fix navigation bar on mobile

--- a/mobile-assets/css/results.css
+++ b/mobile-assets/css/results.css
@@ -8,4 +8,7 @@
      .modal {
           width: 90%;
      }
+     #navPanel {
+         text-align: left;
+     }
 }
